--- a/todo.html
+++ b/todo.html
@@ -7,10 +7,12 @@
     <link rel="stylesheet" href="./todo.css">
 </head>
 <body>
+  
     <div class="addTask">
-        <button>Add Task</button>
+        <button id="button">Add Task</button>
+    <Input id="input" type="text">
     </div>
     <div id= "taskContainer" class="taskContainer"></div>
 </body>
-<script src="./todo.js"></script>
+<script src="./todo-1.js"></script>
 </html>
